// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`compileScenario — sc-park-perp-rev > golden compile snapshot per level (the compiled contract — review on change) > L1 1`] = `
{
  "aids": {
    "followHints": true,
    "pathRibbon": true,
    "pauseOnError": true,
    "shadowCar": true,
    "topdownAllowed": true,
  },
  "briefingBg": [
    {
      "n": 1,
      "textBg": "Задачите са две и се броят поотделно: първо изходната позиция, после самото паркиране. Влез в паркинга по алеята и карай бавно — не повече от 10 км/ч.",
    },
    {
      "n": 2,
      "textBg": "Задача 1: подмини свободното място и спри — под 6 км/ч, практически в покой — когато задната броня подмине съседната кола; дръж около метър и половина странично разстояние от реда. От тази позиция зависи целият замах.",
    },
    {
      "n": 3,
      "textBg": "Включи на задна. Огледай се — двете огледала, после през рамо — и чак тогава започни да завиваш докрай към мястото.",
    },
    {
      "n": 4,
      "textBg": "Движи се назад с пешеходна скорост, следи двете съседни коли в огледалата и изправяй волана, щом колата се подравни с очертанията.",
    },
    {
      "n": 5,
      "textBg": "Спри напълно вътре в очертанията — центрирано и успоредно на линиите — и задръж колата в покой. Ако е тъмно или вали, включи късите светлини преди маневрата.",
    },
  ],
  "collisionMinKmh": 0,
  "conceptIds": [
    "c-reversing",
    "c-maneuver-principles",
    "c-mirrors-blind-spots",
  ],
  "descriptionBg": "Две задачи, в този ред: първо спри в изходната позиция покрай свободното място — подминал го, на около метър и половина странично; после паркирай на заден ход точно в очертанията, с оглеждане преди и по време на маневрата и с възможно най-малко корекции.",
  "id": "sc-park-perp-rev@L1",
  "objectives": [
    {
      "id": "sc-ppr-position",
      "kind": "reachZone",
      "params": {
        "maxSpeedKmh": 6,
        "radiusM": 7.5,
        "x": 0.9,
        "y": 6,
      },
      "titleBg": "Задача 1: спри в изходната позиция покрай свободното място",
    },
    {
      "id": "sc-ppr-park",
      "kind": "completeManeuver",
      "params": {
        "bay": {
          "headingDeg": 90,
          "lengthM": 5,
          "widthM": 2.7,
          "x": 5.03,
          "y": 0,
        },
        "centerTolM": 0.75,
        "headingTolDeg": 15,
        "holdSec": 1.5,
        "maneuver": "parkInBay",
      },
      "titleBg": "Задача 2: паркирай на заден ход в очертаното място и спри напълно",
    },
  ],
  "order": 1000,
  "parkingBay": {
    "headingDeg": 90,
    "lengthM": 5,
    "widthM": 2.7,
    "x": 5.03,
    "y": 0,
  },
  "preDrive": false,
  "spawn": {
    "pointId": "lot-spawn-approach",
  },
  "titleBg": "Перпендикулярно паркиране на заден ход · Ниво 1 — Пълна помощ",
  "traffic": {
    "anchorRadiusM": 400,
    "pedestrianCount": 0,
    "vehicleCount": 0,
  },
  "vehicleStart": "ready",
  "world": {
    "districtId": "lot-perp-v1",
  },
}
`;

exports[`compileScenario — sc-park-perp-rev > golden compile snapshot per level (the compiled contract — review on change) > L2 1`] = `
{
  "aids": {
    "hintsAfterIdleSec": 20,
    "pathRibbon": true,
    "topdownAllowed": true,
  },
  "briefingBg": [
    {
      "n": 1,
      "textBg": "Задачите са две и се броят поотделно: първо изходната позиция, после самото паркиране. Влез в паркинга по алеята и карай бавно — не повече от 10 км/ч.",
    },
    {
      "n": 2,
      "textBg": "Задача 1: подмини свободното място и спри — под 6 км/ч, практически в покой — когато задната броня подмине съседната кола; дръж около метър и половина странично разстояние от реда. От тази позиция зависи целият замах.",
    },
    {
      "n": 3,
      "textBg": "Включи на задна. Огледай се — двете огледала, после през рамо — и чак тогава започни да завиваш докрай към мястото.",
    },
    {
      "n": 4,
      "textBg": "Движи се назад с пешеходна скорост, следи двете съседни коли в огледалата и изправяй волана, щом колата се подравни с очертанията.",
    },
    {
      "n": 5,
      "textBg": "Спри напълно вътре в очертанията — центрирано и успоредно на линиите — и задръж колата в покой. Ако е тъмно или вали, включи късите светлини преди маневрата.",
    },
  ],
  "collisionMinKmh": 0,
  "conceptIds": [
    "c-reversing",
    "c-maneuver-principles",
    "c-mirrors-blind-spots",
  ],
  "descriptionBg": "Две задачи, в този ред: първо спри в изходната позиция покрай свободното място — подминал го, на около метър и половина странично; после паркирай на заден ход точно в очертанията, с оглеждане преди и по време на маневрата и с възможно най-малко корекции.",
  "id": "sc-park-perp-rev@L2",
  "objectives": [
    {
      "id": "sc-ppr-position",
      "kind": "reachZone",
      "params": {
        "maxSpeedKmh": 6,
        "radiusM": 6.25,
        "x": 0.9,
        "y": 6,
      },
      "titleBg": "Задача 1: спри в изходната позиция покрай свободното място",
    },
    {
      "id": "sc-ppr-park",
      "kind": "completeManeuver",
      "params": {
        "bay": {
          "headingDeg": 90,
          "lengthM": 5,
          "widthM": 2.7,
          "x": 5.03,
          "y": 0,
        },
        "centerTolM": 0.63,
        "headingTolDeg": 12.5,
        "holdSec": 1.5,
        "maneuver": "parkInBay",
      },
      "titleBg": "Задача 2: паркирай на заден ход в очертаното място и спри напълно",
    },
  ],
  "order": 1000,
  "parkingBay": {
    "headingDeg": 90,
    "lengthM": 5,
    "widthM": 2.7,
    "x": 5.03,
    "y": 0,
  },
  "preDrive": false,
  "spawn": {
    "pointId": "lot-spawn-approach",
  },
  "titleBg": "Перпендикулярно паркиране на заден ход · Ниво 2 — Частична помощ",
  "traffic": {
    "anchorRadiusM": 400,
    "pedestrianCount": 0,
    "vehicleCount": 0,
  },
  "vehicleStart": "ready",
  "world": {
    "districtId": "lot-perp-v1",
  },
}
`;

exports[`compileScenario — sc-park-perp-rev > golden compile snapshot per level (the compiled contract — review on change) > L3 1`] = `
{
  "aids": {
    "topdownAllowed": true,
  },
  "briefingBg": [
    {
      "n": 1,
      "textBg": "Задачите са две и се броят поотделно: първо изходната позиция, после самото паркиране. Влез в паркинга по алеята и карай бавно — не повече от 10 км/ч.",
    },
    {
      "n": 2,
      "textBg": "Задача 1: подмини свободното място и спри — под 6 км/ч, практически в покой — когато задната броня подмине съседната кола; дръж около метър и половина странично разстояние от реда. От тази позиция зависи целият замах.",
    },
    {
      "n": 3,
      "textBg": "Включи на задна. Огледай се — двете огледала, после през рамо — и чак тогава започни да завиваш докрай към мястото.",
    },
    {
      "n": 4,
      "textBg": "Движи се назад с пешеходна скорост, следи двете съседни коли в огледалата и изправяй волана, щом колата се подравни с очертанията.",
    },
    {
      "n": 5,
      "textBg": "Спри напълно вътре в очертанията — центрирано и успоредно на линиите — и задръж колата в покой. Ако е тъмно или вали, включи късите светлини преди маневрата.",
    },
  ],
  "collisionMinKmh": 0,
  "conceptIds": [
    "c-reversing",
    "c-maneuver-principles",
    "c-mirrors-blind-spots",
  ],
  "descriptionBg": "Две задачи, в този ред: първо спри в изходната позиция покрай свободното място — подминал го, на около метър и половина странично; после паркирай на заден ход точно в очертанията, с оглеждане преди и по време на маневрата и с възможно най-малко корекции.",
  "id": "sc-park-perp-rev@L3",
  "objectives": [
    {
      "id": "sc-ppr-position",
      "kind": "reachZone",
      "params": {
        "maxSpeedKmh": 6,
        "radiusM": 5,
        "x": 0.9,
        "y": 6,
      },
      "titleBg": "Задача 1: спри в изходната позиция покрай свободното място",
    },
    {
      "id": "sc-ppr-park",
      "kind": "completeManeuver",
      "params": {
        "bay": {
          "headingDeg": 90,
          "lengthM": 5,
          "widthM": 2.7,
          "x": 5.03,
          "y": 0,
        },
        "centerTolM": 0.5,
        "headingTolDeg": 10,
        "holdSec": 1.5,
        "maneuver": "parkInBay",
      },
      "titleBg": "Задача 2: паркирай на заден ход в очертаното място и спри напълно",
    },
  ],
  "order": 1000,
  "parkingBay": {
    "headingDeg": 90,
    "lengthM": 5,
    "widthM": 2.7,
    "x": 5.03,
    "y": 0,
  },
  "preDrive": false,
  "spawn": {
    "pointId": "lot-spawn-approach",
  },
  "titleBg": "Перпендикулярно паркиране на заден ход · Ниво 3 — Самостоятелно",
  "traffic": {
    "anchorRadiusM": 400,
    "pedestrianCount": 0,
    "vehicleCount": 0,
  },
  "vehicleStart": "ready",
  "world": {
    "districtId": "lot-perp-v1",
  },
}
`;

exports[`compileScenario — sc-park-perp-rev > golden compile snapshot per level (the compiled contract — review on change) > L4 1`] = `
{
  "aids": {
    "topdownAllowed": true,
  },
  "briefingBg": [
    {
      "n": 1,
      "textBg": "Ниво 4 — По-строга мярка + Изпитни условия: Мястото и допуските са същите, мярката е по-строга: тук се брои и КАК си стигнал — с колко опита и с колко оглеждания. Не бързай в началото, за да не поправяш накрая; икономичната маневра е и по-безопасната, защото всяко излизане и връщане е още едно място, на което някой може да мине зад теб. Освен това оттук нататък е по изпитен протокол — без кола-сянка, без линия и без подсказки. (Наредба № 38)",
    },
    {
      "n": 2,
      "textBg": "Задачите са две и се броят поотделно: първо изходната позиция, после самото паркиране. Влез в паркинга по алеята и карай бавно — не повече от 10 км/ч.",
    },
    {
      "n": 3,
      "textBg": "Задача 1: подмини свободното място и спри — под 6 км/ч, практически в покой — когато задната броня подмине съседната кола; дръж около метър и половина странично разстояние от реда. От тази позиция зависи целият замах.",
    },
    {
      "n": 4,
      "textBg": "Включи на задна. Огледай се — двете огледала, после през рамо — и чак тогава започни да завиваш докрай към мястото.",
    },
    {
      "n": 5,
      "textBg": "Движи се назад с пешеходна скорост, следи двете съседни коли в огледалата и изправяй волана, щом колата се подравни с очертанията.",
    },
    {
      "n": 6,
      "textBg": "Спри напълно вътре в очертанията — центрирано и успоредно на линиите — и задръж колата в покой. Ако е тъмно или вали, включи късите светлини преди маневрата.",
    },
  ],
  "collisionMinKmh": 0,
  "conceptIds": [
    "c-reversing",
    "c-maneuver-principles",
    "c-mirrors-blind-spots",
  ],
  "descriptionBg": "Две задачи, в този ред: първо спри в изходната позиция покрай свободното място — подминал го, на около метър и половина странично; после паркирай на заден ход точно в очертанията, с оглеждане преди и по време на маневрата и с възможно най-малко корекции.",
  "examMode": true,
  "id": "sc-park-perp-rev@L4",
  "objectives": [
    {
      "id": "sc-ppr-position",
      "kind": "reachZone",
      "params": {
        "maxSpeedKmh": 6,
        "radiusM": 5,
        "x": 0.9,
        "y": 6,
      },
      "titleBg": "Задача 1: спри в изходната позиция покрай свободното място",
    },
    {
      "id": "sc-ppr-park",
      "kind": "completeManeuver",
      "params": {
        "bay": {
          "headingDeg": 90,
          "lengthM": 5,
          "widthM": 2.7,
          "x": 5.03,
          "y": 0,
        },
        "centerTolM": 0.5,
        "headingTolDeg": 10,
        "holdSec": 1.5,
        "maneuver": "parkInBay",
      },
      "titleBg": "Задача 2: паркирай на заден ход в очертаното място и спри напълно",
    },
  ],
  "order": 1000,
  "parkingBay": {
    "headingDeg": 90,
    "lengthM": 5,
    "widthM": 2.7,
    "x": 5.03,
    "y": 0,
  },
  "preDrive": false,
  "spawn": {
    "pointId": "lot-spawn-approach",
  },
  "titleBg": "Перпендикулярно паркиране на заден ход · Ниво 4 — Изпитни условия",
  "traffic": {
    "anchorRadiusM": 400,
    "pedestrianCount": 0,
    "vehicleCount": 0,
  },
  "vehicleStart": "cold",
  "world": {
    "districtId": "lot-perp-v1",
  },
}
`;

exports[`compileScenario — sc-park-perp-rev > golden compile snapshot per level (the compiled contract — review on change) > L5 1`] = `
{
  "aids": {
    "topdownAllowed": true,
  },
  "briefingBg": [
    {
      "n": 1,
      "textBg": "Ниво 5 — По тъмно + В дъжд: Упражнението вече е нощем: включи късите светлини още преди да потеглиш и помни, че оттук нататък не караш по пътя, а по снопа на фаровете — късите показват около 40 метра, а в тъмнината отвъд тях еднакво спокойно стои пешеходец в тъмни дрехи. Карай със скорост, от която можеш да спреш ВЪТРЕ в осветеното. Освен това вали: включи чистачките и късите светлини и остави повече място отпред. (ЗДвП чл. 70; чл. 20, ал. 2)",
    },
    {
      "n": 2,
      "textBg": "Задачите са две и се броят поотделно: първо изходната позиция, после самото паркиране. Влез в паркинга по алеята и карай бавно — не повече от 10 км/ч.",
    },
    {
      "n": 3,
      "textBg": "Задача 1: подмини свободното място и спри — под 6 км/ч, практически в покой — когато задната броня подмине съседната кола; дръж около метър и половина странично разстояние от реда. От тази позиция зависи целият замах.",
    },
    {
      "n": 4,
      "textBg": "Включи на задна. Огледай се — двете огледала, после през рамо — и чак тогава започни да завиваш докрай към мястото.",
    },
    {
      "n": 5,
      "textBg": "Движи се назад с пешеходна скорост, следи двете съседни коли в огледалата и изправяй волана, щом колата се подравни с очертанията.",
    },
    {
      "n": 6,
      "textBg": "Спри напълно вътре в очертанията — центрирано и успоредно на линиите — и задръж колата в покой. Ако е тъмно или вали, включи късите светлини преди маневрата.",
    },
  ],
  "collisionMinKmh": 0,
  "conceptIds": [
    "c-reversing",
    "c-maneuver-principles",
    "c-mirrors-blind-spots",
  ],
  "descriptionBg": "Две задачи, в този ред: първо спри в изходната позиция покрай свободното място — подминал го, на около метър и половина странично; после паркирай на заден ход точно в очертанията, с оглеждане преди и по време на маневрата и с възможно най-малко корекции.",
  "environment": {
    "rain": true,
    "timeOfDay": "night",
  },
  "id": "sc-park-perp-rev@L5",
  "objectives": [
    {
      "id": "sc-ppr-position",
      "kind": "reachZone",
      "params": {
        "maxSpeedKmh": 6,
        "radiusM": 5,
        "x": 0.9,
        "y": 6,
      },
      "titleBg": "Задача 1: спри в изходната позиция покрай свободното място",
    },
    {
      "id": "sc-ppr-park",
      "kind": "completeManeuver",
      "params": {
        "bay": {
          "headingDeg": 90,
          "lengthM": 5,
          "widthM": 2.7,
          "x": 5.03,
          "y": 0,
        },
        "centerTolM": 0.5,
        "headingTolDeg": 10,
        "holdSec": 1.5,
        "maneuver": "parkInBay",
      },
      "titleBg": "Задача 2: паркирай на заден ход в очертаното място и спри напълно",
    },
  ],
  "order": 1000,
  "parkingBay": {
    "headingDeg": 90,
    "lengthM": 5,
    "widthM": 2.7,
    "x": 5.03,
    "y": 0,
  },
  "preDrive": false,
  "spawn": {
    "pointId": "lot-spawn-approach",
  },
  "titleBg": "Перпендикулярно паркиране на заден ход · Ниво 5 — Усложнени",
  "traffic": {
    "anchorRadiusM": 400,
    "pedestrianCount": 0,
    "vehicleCount": 0,
  },
  "vehicleStart": "ready",
  "world": {
    "districtId": "lot-perp-v1",
  },
}
`;
